--- a/custom-addons/ksa_zatca_integration/reports/report.xml
+++ b/custom-addons/ksa_zatca_integration/reports/report.xml
@@ -17,15 +17,17 @@
     <record id="paperformat_low_simplified" model="report.paperformat">
         <field name="name">Othaim A4 low margin</field>
         <field name="default" eval="True"/>
-        <field name="format">A4</field>
+         <field name="format">custom</field>
+         <field name="page_height">250</field>
+         <field name="page_width">80</field>
         <field name="orientation">Portrait</field>
-        <field name="margin_top">0</field>
-        <field name="margin_bottom">0</field>
-        <field name="margin_left">15</field>
-        <field name="margin_right">0</field>
+        <field name="margin_top">5</field>
+        <field name="margin_bottom">5</field>
+        <field name="margin_left">5</field>
+        <field name="margin_right">5</field>
         <field name="header_line" eval="False"/>
         <field name="header_spacing">2</field>
-        <field name="dpi">90</field>
+        <field name="dpi">200</field>
     </record>
 
     <record id="paperformat_standard" model="report.paperformat">
